# stdr_simulator

./: .gitignore  .travis.yml  README.md
stdr_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_gui/include/stdr_gui/: stdr_gui_application.h  stdr_gui_connector.h  stdr_gui_controller.h  stdr_gui_loader.h  stdr_info_connector.h  stdr_info_loader.h  stdr_map_connector.h  stdr_map_loader.h  stdr_tools.h
stdr_gui/launch/: stdr_gui.launch
stdr_gui/resources/: images.qrc
stdr_gui/resources/images/: add_robot.xcf  adjusted.xcf  co2.xcf  grid.xcf  load_map.xcf  new_robot.xcf  properties.xcf  real_size.xcf  rfid.xcf  sound.xcf  thermal.xcf  zoom_in_b.xcf  zoom_out_b.xcf
stdr_gui/src/stdr_gui/: stdr_gui_application.cpp  stdr_gui_connector.cpp  stdr_gui_controller.cpp  stdr_gui_loader.cpp  stdr_gui_node.cpp  stdr_info_connector.cpp  stdr_info_loader.cpp  stdr_map_connector.cpp  stdr_map_loader.cpp  stdr_tools.cpp
stdr_gui/ui/: co2SensorProperties.ui  information.ui  kinematicProperties.ui  laserProperties.ui  laserVisualization.ui  map.ui  rfidAntennaProperties.ui  robotCreator.ui  robotFootprint.ui  robotProperties.ui  robotVisualization.ui  simulator.ui  sonarProperties.ui  sonarVisualization.ui  soundSensorProperties.ui  thermalSensorProperties.ui
stdr_launchers/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_launchers/launch/: client.launch  many_robots.launch  no_map.launch  rviz.launch  server_no_map.launch  server_with_map.launch  server_with_map_and_gui.launch  server_with_map_and_gui_plus_robot.launch  test.launch
stdr_launchers/rviz/: config.rviz
stdr_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_msgs/action/: DeleteRobot.action  RegisterRobot.action  SpawnRobot.action
stdr_msgs/msg/: Bumper.msg  BumperSensorMsg.msg  CO2SensorMeasurementMsg.msg  CO2SensorMsg.msg  CO2Source.msg  CO2SourceVector.msg  FootprintMsg.msg  KinematicMsg.msg  LaserSensorMsg.msg  Noise.msg  RfidSensorMeasurementMsg.msg  RfidSensorMsg.msg  RfidTag.msg  RfidTagVector.msg  RobotIndexedMsg.msg  RobotIndexedVectorMsg.msg  RobotMsg.msg  SensorPoseMsg.msg  SonarSensorMsg.msg  SoundSensorMeasurementMsg.msg  SoundSensorMsg.msg  SoundSource.msg  SoundSourceVector.msg  ThermalSensorMeasurementMsg.msg  ThermalSource.msg  ThermalSourceVector.msg
stdr_msgs/srv/: AddCO2Source.srv  AddRfidTag.srv  AddSoundSource.srv  AddThermalSource.srv  DeleteThermalSource.srv  Drift.srv  LoadExternalMap.srv  LoadMap.srv  MoveRobot.srv  Obstruct.srv  ReadSensorPose.srv  RegisterGui.srv  WriteSensorPose.srv
stdr_parser/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_parser/include/stdr_parser/: stdr_parser.h  stdr_parser_exceptions.h  stdr_parser_file_writer.h  stdr_parser_msg_creator.h  stdr_parser_node.h  stdr_parser_specs.h  stdr_parser_tools.h  stdr_parser_validator.h  stdr_parser_xml_file_writer.h  stdr_parser_yaml_file_writer.h  stdr_xml_parser.h  stdr_yaml_parser.h
stdr_parser/src/: stdr_parser.cpp  stdr_parser_file_writer.cpp  stdr_parser_msg_creator.cpp  stdr_parser_node.cpp  stdr_parser_ros_node.cpp  stdr_parser_specs.cpp  stdr_parser_tools.cpp  stdr_parser_validator.cpp  stdr_parser_xml_file_writer.cpp  stdr_parser_yaml_file_writer.cpp  stdr_xml_parser.cpp  stdr_yaml_parser.cpp
stdr_parser/test/: CMakeLists.txt
stdr_parser/test/files/: test_robot_1.xml  test_robot_1.yaml  test_robot_3.xml  test_robot_3.yaml
stdr_parser/test/unit/: stdr_parser_tools_test.cpp  stdr_parser_validator_test.cpp  stdr_xml_parser_test.cpp  stdr_yaml_parser_test.cpp
stdr_resources/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_resources/maps/: map2.yaml  simple_rooms_no_walls.yaml
stdr_resources/resources/: hokuyo4LX.yaml  pandora_robot.xml  pandora_robot.yaml  robot1.yaml  simple_robot.xml  standard_sonar.yaml  too_simple_robot.xml
stdr_resources/resources/Infrared_sensors/: TCRT1000.yaml
stdr_resources/resources/co2_sensors/: naive_co2_sensor.xml
stdr_resources/resources/footprints/: footprint.xml  footprint.yaml  square_footprint_40cm.xml
stdr_resources/resources/kinematic_models/: ideal_kinematic.xml  omni_kinematic.xml  omni_kinematic_noisy.xml
stdr_resources/resources/laser_sensors/: hokuyo4LX.yaml  hokuyo_laser_4L.xml  hokuyo_laser_4L.yaml
stdr_resources/resources/noises/: noise_gauss.yaml
stdr_resources/resources/range_sensors/: TCRT1000.yaml  sonar_400ST100.yaml  standard_sonar.xml  standard_sonar.yaml
stdr_resources/resources/rfid_readers/: omni_3m_rfid_reader.xml  omni_3m_rfid_reader.yaml
stdr_resources/resources/robots/: khepera2.yaml  khepera3.yaml  omni_robot.xml  omni_robot_noisy.xml  pandora_robot.xml  pandora_robot.yaml  pandora_robot_rfid.yaml  random_shape_robot.xml  (+5 more)
stdr_resources/xmls/: environment.xml  gauss.xml  hokuyo.xml  hokuyo_laser_4L.xml  pandora_robot.xml  simple_robot.xml  standard_sonar.xml  test_map.xml  too_simple_robot.xml
stdr_resources/yamls/: noise.yaml  pandora_robot.yaml  standard_sonar.yaml
stdr_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml  robot_plugins.xml
stdr_robot/launch/: robot_manager.launch  test.launch
stdr_robot/src/: handle_robot.cpp  handle_robot_node.cpp  robot_node.cpp  spawn_robot.cpp  spawn_robot_node.cpp  stdr_robot.cpp  stdr_yaml_parser.cpp
stdr_robot/test/: hokuyo_utm-30lx.yaml  test.yaml
stdr_samples/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
stdr_server/src/: map_loader.cpp  map_loader_node.cpp  map_server.cpp  stdr_server.cpp  stdr_server_node.cpp
stdr_server/test/: CMakeLists.txt
stdr_simulator/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
stdr_simulator/documentation/: architecture_overview.odg
stdr_xml_parser/: CMakeLists.txt  package.xml
stdr_xml_parser/src/: stdr_parser.cpp  stdr_parser_msg_creator.cpp  stdr_parser_node.cpp  stdr_parser_ros_node.cpp  stdr_parser_specs.cpp  stdr_parser_tools.cpp  stdr_parser_validator.cpp  stdr_xml_parser.cpp  stdr_xml_parser_base.cpp  stdr_xml_parser_msg_creator.cpp  stdr_xml_parser_node.cpp  stdr_xml_parser_ros_node.cpp  stdr_xml_parser_specs.cpp  stdr_xml_parser_tools.cpp
(+151 files in other folders)
