<?xml version="1.0"?>
<package>
  <name>stdr_gui</name>
  <version>0.0.0</version>
  <description>The stdr_gui package</description>

  <maintainer email="etsardou@gmail.com">etsardou@gmail.com</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>stdr_robot</build_depend>
  <build_depend>stdr_server</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>stdr_robot</run_depend>
  <run_depend>stdr_server</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>
