<?xml version="1.0"?>
<package>
  <name>stdr_resources</name>
  <version>0.0.1</version>
  <description>The stdr_resources package provides robots and sensors for stdr_simulator.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>


  <license>GPLv3</license>
  
  <url type="website">http://stdr-simulator-ros-pkg.github.io</url>
  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>
  
  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
